Arreglos de codigo del modulo de datos

--- a/src/views/editExecutive.ejs
+++ b/src/views/editExecutive.ejs
@@ -12,7 +12,7 @@
                 <a>Datos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Editar Ejecutivo de Reclamos</strong>
+                <strong>Editar Ejecutivo</strong>
             </li>
         </ol>
     </div>
@@ -28,8 +28,8 @@
                             <div class="ibox">
                                 <div class="form-control">
                                     <% if (executive.rif_ejecutivo === '') { %>
-                                        <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
-                                            <div class="col-sm-10">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
+                                            <div class="col-sm-9">
                                                 <input 
                                                     type="text"
                                                     name="cedula_ejecutivo"
@@ -41,8 +41,8 @@
                                             </div>
                                         </div>
                                     <% } else { %>
-                                        <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
-                                            <div class="col-sm-10">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
+                                            <div class="col-sm-9">
                                                 <input 
                                                     type="text"
                                                     name="rif_ejecutivo"
@@ -55,8 +55,8 @@
                                         </div>
                                     <% } %>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Nombre</label>
-                                        <div class="col-sm-10">
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Nombre</label>
+                                        <div class="col-sm-9">
                                             <input 
                                                 type="text"
                                                 name="nombre_ejecutivo"
@@ -68,8 +68,8 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Apellido</label>
-                                        <div class="col-sm-10">
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Apellido</label>
+                                        <div class="col-sm-9">
                                             <input 
                                                 type="text"
                                                 name="apellido_ejecutivo"
@@ -81,16 +81,15 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Grupo</label>
-                                        <div class="col-sm-10">
-                                            <input 
-                                                type="text"
-                                                name="grupo_ejecutivo"
-                                                id="grupo_ejecutivo" 
-                                                value="<%= executive.grupo_ejecutivo %>" 
-                                                class="form-control"
-                                                required
-                                            >
+                                    <div class="form-group">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo de ejecutivo</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="tipo_ejecutivo">
+                                                    <option selected value="<%= executive.tipo_ejecutivo %>"><%= executive.tipo_ejecutivo %></option>
+                                                        <option value="Suscripción">Suscripción</option>
+                                                        <option value="Siniestros">Siniestros</option>
+                                                </select>
+                                            </div>
                                         </div>
                                     </div>                                    
                                 </div>
@@ -99,8 +98,8 @@
                         <div class="col-lg-6">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Celular</label>
-                                        <div class="col-sm-10">
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Celular</label>
+                                        <div class="col-sm-9">
                                             <input 
                                                 type="tel"
                                                 name="celular_ejecutivo"
@@ -112,8 +111,8 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Correo</label>
-                                        <div class="col-sm-10">
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Correo</label>
+                                        <div class="col-sm-9">
                                             <input 
                                                 type="email"
                                                 name="correo_ejecutivo"
@@ -126,8 +125,8 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Dirección</label>
-                                        <div class="col-sm-10">
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Dirección</label>
+                                        <div class="col-sm-9">
                                             <textarea 
                                                 name="direccion_ejecutivo"
                                                 id="direccion_ejecutivo" 
@@ -136,8 +135,8 @@
                                             ><%= executive.direccion_ejecutivo %></textarea>
                                         </div>
                                     </div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
-                                        <div class="col-sm-10">
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label"></label>
+                                        <div class="col-sm-9">
                                             <input 
                                                 type="hidden"
                                                 name="id_ejecutivo"
