--- a/src/views/executives.ejs
+++ b/src/views/executives.ejs
@@ -11,7 +11,7 @@
                 <a>Datos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Ejecutivo de Reclamos</strong>
+                <strong>Consulta de Ejecutivos</strong>
             </li>
         </ol>
     </div>
@@ -21,7 +21,7 @@
         <div class="col-lg-12">
             <div class="ibox ">
                 <div class="ibox-title">
-                    <h5>Ejecutivo de Reclamos</h5>
+                    <h5>Ejecutivos</h5>
                 </div>
                 <div class="ibox-content">
                     <div class="table-responsive">
@@ -37,6 +37,7 @@
                             <th>Apellido</th>
                             <th>Celular</th>
                             <th>Correo</th>
+                            <th>Tipo</th>
                             <th>Dirección</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
@@ -53,6 +54,7 @@
                             <th>Apellido</th>
                             <th>Celular</th>
                             <th>Correo</th>
+                            <th>Tipo</th>
                             <th>Dirección</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
@@ -138,6 +140,7 @@ $(document).ready(function(){
             {"data": "apellido_ejecutivo"},
             {"data": "celular_ejecutivo"},
             {"data": "correo_ejecutivo"},
+            {"data": "tipo_ejecutivo"},
             {"data": "direccion_ejecutivo"},
             {
                 "data": "",
