--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -58,8 +58,8 @@
                             <li><a href="/sistema/insurers">Consultar Aseguradoras</a></li>
                             <li><a href="/sistema/add-own-agent">Agregar Agente Propio</a></li>
                             <li><a href="/sistema/own-agents">Consultar Agentes Propios</a></li>
-                            <li><a href="/sistema/add-executive">Agregar Ejecutivo de Reclamos</a></li>
-                            <li><a href="/sistema/executives">Consultar Ejecutivos de Reclamos</a></li>
+                            <li><a href="/sistema/add-executive">Agregar Ejecutivo</a></li>
+                            <li><a href="/sistema/executives">Consultar Ejecutivos</a></li>
                         </ul>
                     </li>
                     <li>
