--- a/src/views/legalInsuredForm.ejs
+++ b/src/views/legalInsuredForm.ejs
@@ -126,9 +126,8 @@
                                                     type="text"
                                                     name="nombre_contacto_per_jur"
                                                     id="nombre_contacto_per_jur" 
-                                                    placeholder="Persona Contacto de Empresa *" 
+                                                    placeholder="Persona Contacto de Empresa" 
                                                     class="form-control"
-                                                    required
                                                 >
                                             </div>
                                         </div>
@@ -139,9 +138,8 @@
                                                     type="text"
                                                     name="cargo_contacto_per_jur"
                                                     id="cargo_contacto_per_jur" 
-                                                    placeholder="Cargo de Persona Contacto de Empresa *" 
+                                                    placeholder="Cargo de Persona Contacto de Empresa" 
                                                     class="form-control"
-                                                    required
                                                 >
                                             </div>
                                         </div>
