Arreglos en el codigo del modulo de poliza

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -85,7 +85,7 @@
                         <a href="#"><i class="fa fa-window-restore"></i> <span class="nav-label">Pólizas</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li>
-                                <a href="#">Agregar Individual<span class="fa arrow"></span></a>
+                                <a href="#">Agregar Póliza<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li><a href="/sistema/add-health-policy">Salud</a></li>
                                     <li><a href="/sistema/add-vehicle-policy">Vehículo</a></li>
